# pony-code

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  MANIFEST.in  PICO_OPTIMIZATION_SPEC.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: a1-task-7-report.md  a1-task-8-report.md  progress.md
benchmarks/: coding_tasks.json
benchmarks/baselines/: core-v1.json
benchmarks/evaluation/: benchmark_schema.py  experiments_real.py  experiments_recovery.py  experiments_synthetic.py  fixed_benchmark.py  metrics_common.py  metrics_reports.py  provider_benchmark.py  sandbox_governance.py
benchmarks/live_e2e/: README.md  __init__.py  run_live_session.py
benchmarks/memory_quality/: README.md  run_benchmark.py  scenario_1_recall.jsonl  scenario_2_search_cn.jsonl  scenario_3_update.jsonl  scenario_4_multi_note.jsonl  scenario_5_no_noise.jsonl  scenario_6_shared.jsonl  scenario_7_semantic_and_safety.jsonl
benchmarks/perf/: README.md  __init__.py  bench_build_v2.py  bench_recall.py  bench_request_build.py  bench_retrieval.py  bench_sandbox.py  bench_security.py  bench_security_recovery.py  bench_session_context.py  harness.py
benchmarks/support/: __init__.py  fake_provider.py
docker/sandbox/: Dockerfile  image-inputs.lock.json
docs/: architecture.md  cli-installation-and-updates.md  coding-agent-workflow-plan.md  context-and-sessions.md  domain-model.md  local-stable-execution.md  memory-model.md  memory.md  provider-execution.md  recovery.md  security.md  verification.md
docs/adr/: 0039-make-explicit-cli-surface-primary.md  0040-docker-filtered-staging.md  0041-distributed-release-authority.md  0042-sealed-local-authorization.md  0043-workflow-state-and-session-v3.md  0044-provider-auto-resolution.md  (+4 more)
examples/mini-pico/: pyproject.toml
examples/mini-pico/mini_pico/: __init__.py  agent_loop.py  cli.py  context_manager.py  providers.py  runtime.py  state.py  tool_executor.py  tools.py  workspace.py
examples/mini-pico/tests/: test_agent_loop.py  test_contract.py  test_tools.py
pico/: __init__.py  __main__.py  action_codec.py  agent_loop.py  checkpoint.py  checkpoint_store.py  cli.py  cli_commands.py  cli_diagnostics.py  cli_docker_sandbox.py  cli_help.py  cli_memory.py  cli_migration.py  cli_output.py  cli_parser.py  cli_recovery.py  cli_session.py  cli_start.py  compaction.py  config.py  context_manager.py  current_surface_migration.py  docker_sandbox.py  docker_sandbox_network_control.py  file_lock.py  messages.py  migration.py  model_actions.py  model_capabilities.py  model_config.py  model_output_parser.py  model_resolver.py  observability.py  prompt_prefix.py  recovery_checkpoint_writer.py  recovery_manager.py  recovery_models.py  recovery_paths.py  recovery_policy.py  repo_map.py  (+24 more)
pico/agent/: loop.py  (+7 more)
pony/: __init__.py
scripts/: aggregate_docker_sandbox_release.py  aggregate_srt_feasibility.py  check.sh  check_live.sh  collect_resume_metrics.py  docker_sandbox_feasibility.py  docker_sandbox_release.py  evaluate.py  linux_sandbox_probe.py  live_model_smoke.py  run_large_scale_experiments.py  run_provider_experiments.py  srt_feasibility.py  verify_distribution.py
tests/: conftest.py  release_authority_fixture.py  test_a1_security_integration.py  test_a5_a7_contracts.py  test_a7_shell_contract.py  test_action_codec.py  test_agent_loop.py  test_agent_loop_digest.py  test_agent_loop_e2e.py  test_agent_loop_e2e_v2.py  test_agent_loop_injection_sent.py  test_agent_loop_request_shape.py  test_agent_loop_v2_shape.py  test_allowed_tools.py  test_artifact_security.py  test_bootstrap_read_safety.py  test_checkpoint.py  test_checkpoint_store.py  test_checkpoint_store_durability.py  test_checkpoint_store_invalid_records.py  test_checkpoint_store_phase1.py  test_checkpoint_store_security.py  test_clean_up.py  test_cli_commands.py  test_cli_diagnostics.py  test_cli_error_envelope.py  test_cli_memory_migrate.py  test_cli_migration.py  test_cli_output.py  test_cli_parser.py  test_cli_session_commands.py  test_cli_session_inspect.py  test_cli_trust.py  test_cli_workflow.py  test_compaction.py  test_config.py  test_config_context.py  test_config_memory.py  test_config_toml_full.py  test_context_budget.py  (+145 more)
(+323 files in other folders)
