[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pico"
version = "0.2.0"
description = "Small local coding agent for DeepSeek, OpenAI-compatible, Anthropic-compatible, and Ollama models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pico = "pico.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools]
packages = [
  "pico",
  "pico._docker_sandbox",
  "pico.context",
  "pico.features",
  "pico.memory",
  "pico.providers",
]
include-package-data = false

[tool.setuptools.package-data]
"pico._docker_sandbox" = ["image-manifest.json", "docker-config/config.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
extend-exclude = [".claude", ".superpowers"]
