[build-system]
requires = ["hatchling>=1.30,<2"]
build-backend = "hatchling.build"

[project]
name = "pony-code"
version = "1.0.0"
description = "Local coding agent for repository-grounded engineering work"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["coding-agent", "developer-tools", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "prompt-toolkit>=3.0.52,<4",
]

[project.urls]
Homepage = "https://github.com/xiawiie/pony-code"
Documentation = "https://github.com/xiawiie/pony-code#readme"
Issues = "https://github.com/xiawiie/pony-code/issues"
Source = "https://github.com/xiawiie/pony-code"

[project.scripts]
pony = "pony.cli.app:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.hatch.build.targets.sdist]
include = ["/LICENSE", "/README.md", "/pyproject.toml", "/pony"]

[tool.hatch.build.targets.wheel]
packages = ["pony"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
extend-exclude = [".claude", ".superpowers"]
